2005-03-11  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	Upped version to 0.6 in preparation for release.

	* src/lang.py:
	Added french translation.

	* src/main.py:
	Added required python version check.

	* src/tlib/oscar.py:
	Added &quot; conversion to dehtml.

	* src/legacy/icqt.py:
	Added dehtml, which is necessary for receiving messages from AIM
	users.

	* src/utils.py:
	Fixed stupid typo.

	* src/main.py:
	Forgot to import properly.

2005-03-08  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/utils.py:
	Added regex check for illegal control chars.

	* src/session.py:
	Fixed lack of calling SessionResource with all args.

	* src/legacy/glue.py:
	Repaired resourceOffline typo.

2005-03-07  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/utils.py:
	Altered utf8encode to use tests offered by Florian.

2005-03-05  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	Killed unnecessary error report.

	* src/main.py:
	* src/session.py:
	* src/register.py:
	* src/legacy/aimt.py:
	* src/legacy/glue.py:
	* src/xmlconfig.py:
	* src/config.py:
	* src/jabw.py:
	Applied some of James's PyMSNt 0.9.1 patches.

2005-03-03  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	Added observer for stream errors.

2005-03-02  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	* src/tlib/socks5.py:
	* src/tlib/sockserror.py:
	* src/legacy/icqt.py:
	* config_example.xml:
	* src/config.py:
	* AUTHORS:
	Applied Daniel Chandran's socks patches.

2005-02-27  Daniel Henninger  <jadestorm@nc.rr.com>

	* AUTHORS:
	Added Chris.

	* src/tlib/oscar.py:
	Added Chris Carlin's threading patch.

	* src/disco.py:
	Applied Florian's error IQ patch.

2005-02-23  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	Added lang import.

	* src/jabw.py:
	Added check in error type handler.

2005-02-20  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/jabw.py:
	* src/debug.py:
	* src/main.py:
	* src/misciq.py: